Updated jquery asset to use https

--- a/cv/index.html
+++ b/cv/index.html
@@ -627,7 +627,7 @@
   </div>
 </div>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script>
   $("body").on("click", ".dotClickable", function () {
     var linked = $(this).data("linked");
