--- a/404.html
+++ b/404.html
@@ -25,6 +25,8 @@
   
   <link rel="stylesheet" href="https://harrylee.me/css/cv.css">
   
+  <link rel="stylesheet" href="https://harrylee.me/css/all.min.css">
+  
 
   <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="			&#34;DevSecOps Evangelist&#34; -
@@ -32,7 +34,6 @@
 	" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://harrylee.me/404.html" />
-
 
 <meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="			&#34;DevSecOps Evangelist&#34; -
