--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Harry Lee&#39;s Blog</title>
+    <title>Harry Lee's CV</title>
 
     
     <meta charset="utf-8">
