--- a/cv/index.html
+++ b/cv/index.html
@@ -216,7 +216,7 @@ The Inspiration Lab attended WebSummit 2015 (Dublin) as an ALPHA startup. The co
                                 
                                 <div class="item mb-3">
                                     <div class="item-heading row align-items-center mb-2">
-                                        <h4 class="item-title col-12 col-md-6 col-lg-6 mb-2 mb-md-0">Ambassador</h4>
+                                        <h4 class="item-title col-12 col-md-6 col-lg-6 mb-2 mb-md-0">CNCF Ambassador</h4>
                                         <div class="item-meta col-12 col-md-6 col-lg-6 text-muted text-left text-md-right">2020 Apr - Present</div>
                                     </div>
                                     <div class="item-meta text-muted text-left">Cloud Native Computing Foundation</div>
