--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="map[]" />
+  <meta name="author" content="Harry Lee" />
   <link rel="shortcut icon" type="image/x-icon" href="https://harrylee.me/img/favicon.png">
 
   
@@ -18,27 +18,32 @@
   
   
   
-  <link rel="stylesheet" href="https://harrylee.me/style.min.5e3cee18517577961c70ad88917d12890b3f22161e887f8da699d860f7dfb0ec.css">
+  <link rel="stylesheet" href="https://harrylee.me/style.min.6f642c5866835106e8a19b94463576436c99be9e41a8714ab3df3daa95f6bf90.css" integrity="sha256-b2QsWGaDUQbooZuURjV2Q2yZvp5BqHFKs989qpX2v5A=">
+  
+  
+  
+  <link rel="stylesheet" href="https://harrylee.me/style-dark.min.0a647fb6c07e04b77b54fa0515d0a683d39ecdb251dba960fe1f966f7ff36fc2.css" media="(prefers-color-scheme: dark)" integrity="sha256-CmR/tsB&#43;BLd7VPoFFdCmg9OezbJR26lg/h&#43;Wb3/zb8I=">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <link href="https://harrylee.me/css/theme.css?1587055174" rel="stylesheet">
+  <link href="https://harrylee.me/css/theme.css?1587209771" rel="stylesheet">
 
   
   
 
   <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="			&#34;DevSecOps Evangelist&#34; -
-			This is my personal site.
+<meta property="og:description" content="	&#34;DevSecOps Evangelist&#34; -
+	This is my personal site.
 	" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://harrylee.me/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="			&#34;DevSecOps Evangelist&#34; -
-			This is my personal site.
+<meta itemprop="description" content="	&#34;DevSecOps Evangelist&#34; -
+	This is my personal site.
 	"><meta name="twitter:card" content="summary"/>
+<meta name="twitter:image" content="https://harrylee.me//img/avatar.png"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="			&#34;DevSecOps Evangelist&#34; -
-			This is my personal site.
+<meta name="twitter:description" content="	&#34;DevSecOps Evangelist&#34; -
+	This is my personal site.
 	"/>
 
   <!--[if lte IE 9]>
@@ -56,8 +61,8 @@
     <header>
   
   <div class="avatar">
-    <img class="avatarMask" src="https://harrylee.me//img/avatar.png">
-    <a href="https://harrylee.me/"><img src="https://harrylee.me//img/avatar-border.svg" }}></a>
+    <img class="avatarMask" src="https://harrylee.me//img/avatar.png" alt="">
+    <a href="https://harrylee.me/"><img class="avatar-border" src="https://harrylee.me//img/avatar-border.svg" alt=""></a>
   </div>
   
   <h2><a class="author" href="https://harrylee.me/">Harry Lee</a></h2>
@@ -71,7 +76,7 @@
     </div>
     <footer>
   <p>
-  &copy; 2019 Harry Lee.
+  &copy; 2020 Harry Lee.
   Powered by <a href="https://gohugo.io/">Hugo</a>
   using the <a href="https://github.com/koirand/pulp/">pulp</a> theme.
   </p>
